--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,119 @@
 <!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view  data-weui-theme="light">
+  <view class="myProfile">
+    <view class="avatarUrl">
+      <image src="{{userInfo.avatarUrl}}"></image>
+    </view>
+    <view class="nickNameAndPostion">
+      <view>{{userInfo.nickName}}</view>
+      <view>
+        {{userInfo.city + 
+        ' ' + userInfo.province + 
+        ' ' + userInfo.country}}
+      </view>
+    </view>
+  </view>
+
+  <view class="infoSwitchView">
+    <c-cells ext-class="infoSwitchCells" title="信息类开关">
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+    </c-cells>
+  </view>
+
+
+  <view class="infoSwitchView">
+    <c-cells ext-class="infoSwitchCells" title="工具类开关">
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+      <c-cell>
+        <view>标题文字使用slot</view>
+        <view slot="footer">
+          <switch checked="{{false}}" bindchange="changeSwitchHandle"></switch>
+        </view>
+      </c-cell>
+
+    </c-cells>
+  </view>
+
+  <view class="exitView">
+    <button type="warn">退出</button>
+  </view>
+  
+
+</view>
