--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,1 +1,42 @@
 /* pages/my/my.wxss */
+
+.myContainer{
+  display: flex;
+  flex-direction: column;
+}
+.myProfile{
+  display: flex;
+  padding:30rpx 0 30rpx 30rpx;
+  border-bottom: 5px solid #efefef;
+}
+.avatarUrl image{
+  width:100rpx;
+  height:100rpx;
+  border-radius: 100rpx;
+  margin-right: 50rpx;
+}
+.exitView{
+  padding: 30rpx;
+}
+.exitView button{
+  width: 80%;
+}
+
+@media (prefers-color-scheme: dark) {
+  /* DarkMode 下的样式 start */
+  .myProfile{
+    display: flex;
+    padding:30rpx 0 30rpx 30rpx;
+    border-bottom: 5px solid rgb(22, 21, 21);
+    color: rgb(128, 128, 128);
+  }
+  
+  .weui-cells__title{
+    color: rgb(128, 128, 128);
+  }
+  .weui-cell{
+    background-color: #2E2D2D;
+    color: rgb(128, 128, 128);
+  }
+  /* DarkMode 下的样式 end */
+}
