--- a/pages/loadingpage/loadingpage.wxml
+++ b/pages/loadingpage/loadingpage.wxml
@@ -2,11 +2,10 @@
 <view class="loadingPageContainer">
   <view class="loadingPageLogoView">
     <image src="/res/images/wx-logo01.png" />
-    <text>MY TOOLS</text>
-    <text>{{ debuginfo }}</text>
+    <text>MY TOOLS{{ debuginfo }}</text>
   </view>
   <view class="loginAuthView">
-  <button hidden="{{ loginAuthBtnShow }}" type="{{ theme == 'light'? 'primary':'default' }}"  open-type="getUserInfo" bindgetuserinfo="loginAuthHandle">登录授权</button>
+  <button hidden="{{ loginAuthBtnHide }}" type="{{ theme == 'light'? 'primary':'default' }}"  open-type="getUserInfo" bindgetuserinfo="loginAuthHandle">登录授权</button>
   </view>
   <view class="footer">
     Copyright © My Tools group
