--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -38,5 +38,8 @@
         <view>1</view>
         <view>1</view>
     </scroll-view>
+
+    <view style="color:red">{{test}}</view>
+
   </scroll-view>
 </view>
