在loadingpage中添加倒计时3秒，在配置文件中修改倒计时时间，调整index页的登录不成功的交互

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 
-<view class="indexContainer">
+<view hidden="{{ pageHide }}" class="indexContainer">
   <view class="headView">
     <image class="saoyisaoImg" src="../../res/images/saoyisao-dark.png"/>
     <image class="locationImage" src="../../res/images/location-light.png"></image>
@@ -10,7 +10,7 @@
     scroll-y="true">
     <view class="todayNumber">
       <view>
-        今日限号(北京)
+        今日限号(北京){{pageHide}}
       </view>
       <view class="todayNumberView">
         <text>5</text>
