--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -43,15 +43,19 @@ page{
 .todayNumber{
   display: flex;
   flex-direction: column;
-  font-size: 25rpx;
+  font-size: 30rpx;
   color: #efefef;
-  padding-top:20rpx;
+  padding-top:30rpx;
   justify-content: center;
   align-items: center;
 }
 .todayNumberView{
   color: #efefef;
   font-size: 200rpx;
+}
+.noRestriction{
+  font-size: 150rpx;
+  font-family: '微软雅黑';
 }
 .todayNumberView text{
   padding-right: 30rpx;
@@ -66,19 +70,41 @@ page{
   white-space: nowrap;
   width: 100%;
 }
-.gasPriceList view{
+
+.pricesView {
   display: inline-block;
-  width: 100rpx;
+  width: 600rpx;
   text-align: center;
-  background-color: rgb(14, 166, 236);
+  background-color: rgb(7, 7, 7);
   opacity: .7;
-  border-radius: 200rpx;
+  border-radius: 10rpx;
   color: #efefef;
-  height: 100rpx;
+  height: 200rpx;
   margin:0 20rpx 0 20rpx;
   vertical-align: middle;
   line-height: 100rpx;
-
+}
+.priceCity{
+  border-bottom: 1px solid #ccc;
+  font-size: 35rpx;
+}
+.priceListText{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 5rpx;
+  font-size: 16rpx;
+}
+.priceListText text{
+  flex:1;
+  font-size: 30rpx;
+}
+.priceListText text text{
+  width: 100rpx;
+  display: inline-block;
+  width:150rpx;
+  height: 30rpx;
+  border:1px solid red;
 }
 
 
