--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -77,92 +77,113 @@ page{
   align-items: center;
   padding-right: 30rpx ;
 }
-
-
-.gasPriceList{
-  white-space: nowrap;
-  width: 100%;
-}
-
-.pricesView {
-  display: inline-block;
-  width: 600rpx;
-  text-align: center;
-  background-color: rgb(7, 7, 7);
-  opacity: .7;
-  border-radius: 10rpx;
-  color: #efefef;
-  height: 200rpx;
-  margin:0 20rpx 0 20rpx;
-  vertical-align: middle;
-  line-height: 100rpx;
-}
-.priceCity{
-  border-bottom: 1px solid #ccc;
-  font-size: 35rpx;
-}
-.priceListText{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin: 5rpx;
-  font-size: 16rpx;
-}
-.priceListText text{
-  flex:1;
-  font-size: 30rpx;
-}
-.priceListText text text{
-  width: 100rpx;
-  display: inline-block;
-  width:150rpx;
-  height: 30rpx;
-  border:1px solid red;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.aaa{
-  height: 500px;
-  border:1px solid red;
-}
-
-
-
-
-
-
-
-.weather{
-  width: 100%;
-  margin: 0rpx;
+.otherContent{
+  height: 500rpx;
 }
 .weatherView{
+  margin-top: 50rpx;
+  height: 470px;
+  position: relative;
+}
+.weatherContent{
+  background-color: #fff;
+  height:450rpx;
+}
+.weatherDetail{
   position: absolute;
-  top:200px;
-  left:0px;
-  height: 200rpx;
-  width: 70%;
-  background-image: linear-gradient(to right, rgb(112,169,243),rgb(50,145,223));
-  border-radius: 200px;
+  top: -150rpx;
+  height: 300rpx;
+  width:65%;
+  border-top-right-radius: 200rpx;
+  border-bottom-right-radius: 200rpx;
+  background-image: linear-gradient(to right,rgb(72, 189, 243),rgb(0, 162, 236));
+  box-shadow: 2px 0 5px #666;
 }
-.infoContent{
-  width: 100%;
-  height: 100%;
+.weatheraqi,.weatheraqi2,.weatheraqiGray,.weatheraqiWhite{
+  position: absolute;
+  right:50rpx;
+  top: -90rpx;
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 200rpx;
+  background-color: #fff;
+}
+.weatheraqi2{
+  right:-20rpx;
+  top: -90rpx;
+  width: 100rpx;
+  height: 100rpx;
+  font-size: 25rpx;
+  padding-top: 16rpx;
+  text-align: center;
+  color: #666;
+}
+.weatheraqiGray{
   background-color: #efefef;
+  right:59rpx;
+  top:-78rpx;
+  width: 130rpx;
+  height: 130rpx;
 }
+
+.weatheraqiWhite{
+  background-color: #fff;
+  right:73rpx;
+  top:-65rpx;
+  width: 100rpx;
+  height: 100rpx;
+  color:#666;
+  font-size:46rpx;
+  text-align: center;
+}
+.weatheraqiWhite text{
+  display: block;
+  padding-top: 10rpx;
+  color: #666;
+}
+
+.powerAndH{
+  color:#fff;
+  font-size:30rpx;
+  padding: 20rpx 0 10rpx 30rpx;
+
+}
+.tempText{
+  font-size: 130rpx;
+  color: #fff;
+  padding-left: 20rpx;
+}
+.wid{
+  font-size: 40rpx;
+  color: #fff;
+}
+
+
+.weatherDays{
+ display: flex;
+ flex-direction: column;
+ padding-top: 160rpx;
+}
+.weatherFuture{
+  display: flex;
+  color:#666;
+  padding-left: 20rpx;
+  flex-wrap: wrap;
+}
+.weatherFuture view{
+  margin: 0 10rpx 0 10rpx;
+  border-radius: 6rpx;
+}
+.weatherData{
+  width: 750rpx;
+  font-size: 46rpx;
+  padding-top: 24rpx;
+}
+
+
+
+
+
 
 @media (prefers-color-scheme: dark) {
   /* DarkMode 下的样式 start */
