完成星座数据的提取，还缺少首页下拉刷新，星座配置和星座的ui实现，以及按照信息是否显示对信息进行显示

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -23,7 +23,9 @@
       <view class="oilMore"><c-icon icon="arrow" color="#ccc" size="{{15}}" bindtap="oilPriceHandle"></c-icon></view>
     </view>
 
-    <view class="otherContent"></view>
+    <view class="otherContent">
+      {{xingzuo.summary}}
+    </view>
 
     <view class="weatherView">
       <view class="weatherContent">
