--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -1,1 +1,13 @@
 /* pages/news/news.wxss */
+page{
+  height: 100%;
+}
+.newsContainer{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.newsContainer text{
+  font-size: 120rpx;
+}
