--- a/pages/tools/tools.wxss
+++ b/pages/tools/tools.wxss
@@ -1,1 +1,13 @@
 /* pages/tools/tools.wxss */
+page{
+  height: 100%;
+}
+.toolsContainer{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toolsContainer text{
+  font-size: 120rpx;
+}
