--- a/pages/tools/tools.wxss
+++ b/pages/tools/tools.wxss
@@ -5,9 +5,25 @@ page{
 .toolsContainer{
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
 }
-.toolsContainer text{
-  font-size: 120rpx;
+.toolsContainer .toolsView{
+  margin: 30rpx 30rpx 0 30rpx;
+  background-color: rgb(237, 237, 238);
+  border-radius: 10rpx;
+  padding: 32rpx;
+  box-shadow: 1px 1px 3px 1px #ccc;
+  font-size: 32rpx;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (prefers-color-scheme: dark) {
+  /* DarkMode 下的样式 start */
+  .toolsContainer .toolsView{
+    background-color: rgb(49, 49, 49);
+    box-shadow: 0px 0px 0px 0px #ccc;
+  }
+  /* DarkMode 下的样式 end */
 }
